src/main.css
:root {
  /*
      Main colors
  */

  --main-color: #8f6cd9;
  --txt-color: #f6f5fb;

  --background-image: linear-gradient(to bottom right, #190348, #53416b);
  --background-color: #140732;

  /*
      Link color
  */
  --link-color: var(--main-color);
  --link-hover: #f6f5fb;

  /*
      Fonts
  */
  --main-font: "Work Sans", sans-serif;
  --font-weight: 400;
  --letter-spacing: 2px;

  /*
      Shadows
  */

  --base-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.2);
  --txt-shadow: 2px 2px 3px rgba(0,0,0,0.2);
}

body {
  margin: 0;
  padding: 0;
  background-image: var(--background-image);
  height: 100%;
}

html {
  height: 100%;
}

